# Circuit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
end_to_end/: test1.dat.ans  test_cmp.py  test_gen.py  tmp
include/: circuit.hpp  connected_circuit.hpp  edge.hpp  input.hpp  input_output.hpp  matrix_equation.hpp  matrix_slae.hpp
lib/include/: connected_circuit.hpp
lib/src/: edge.cpp
nix/: circuit.nix
nix/overlays/: circuit.nix
src/: circuit.cpp  connected_circuit.cpp  edge.cpp  input_output.cpp
task/: CMakeLists.txt  currents.cpp
unit_tests/: CMakeLists.txt  test.cpp
